# MyNIR

./: .gitignore  AGENTS.md  Polunin_Bifurcation_Lab_v2.ipynb  README.md  analysis.py  base.ipynb  base_intervals.ipynb  delayed.ipynb  delayed_intervals.ipynb  diploma.md  experiment.py  mixed.ipynb  mixed_intervals.ipynb  mixid_negative_gamma.ipynb  nonlinear_models_toolkit.py  pyproject.toml  regression.py  report.py  simulation.py  theory.ipynb  tz.md  visualization.py  Книга. Универсальные модели для графиков.xlsx
docs/: api.md  usage.md
examples/: README.md  base_quickstart.py  delay_windows.py  mixed_report.py
nonlinear_lab/: __init__.py  delay_small_lag_control.py  direct_identification.py  features.py  lifecycle.py  models.py  plan_a_experiment.py  plan_b_experiment.py  plan_c_experiment.py  plan_d_experiment.py  plan_e_experiment.py  plan_f_experiment.py  plan_g_experiment.py  plan_h_experiment.py  plotting.py  real_data.py  real_data_cases.py  real_data_consistency.py  real_data_experiment.py  real_data_routing.py  real_data_structural.py  regression.py  reporting.py  revenue_b1.py  revenue_b2.py  revenue_bridge.py
plans/: planA.md  planB.md  planC.md  planD.md  planE.md  planF.md  planG.md  planH.md  planI.md  planRouter.md  plan_review.md  plan_review_2.md  plan_review_3.md 
real_data/: b1_results.md  b2_results.md  c1_results.md  chapter.md  plan.md  problem.md  results.md  ОКВЭД2 (Общероссийский классификатор видов экономической деятельности.docx  февраль 2026 OKVED.XLS
review/: review_plan.md
scripts/: build_company_case_figure.py  (+34 more)
(+172 files in other folders)
