[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear-lab"
version = "0.1.0"
description = "Utilities for nonlinear growth-process experiments and regression diagnostics."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "openpyxl",
  "pandas",
  "scikit-learn",
  "statsmodels",
  "xlrd",
]

[tool.setuptools]
packages = ["nonlinear_lab"]
